support/templates/nfs-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-server-01
spec:
  selector:
    role: nfs-server-01
    name: nfs-server-01
    component: nfs-server-01
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server-01
spec:
  replicas: 1
  selector:
    matchLabels:
      role: nfs-server-01
  template:
    metadata:
      labels:
        role: nfs-server-01
    spec:
      volumes:
      - name: nfs-export
        configMap:
          name: nfs-config
      containers:
      - name: nfs-server-01
        image: gcr.io/google_containers/volume-nfs:0.8
        volumeMounts:
          - mountPath: /export
            name: nfs-export
        ports:
          - containerPort: 2049
            name: nfs
          - containerPort: 20048
            name: mountd
          - containerPort: 111
            name: rpcbind
